crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// An opaque handle to an actuator that records what it was told to do.
typedef struct PamojaRecordingActuator PamojaRecordingActuator;
// An opaque handle to a robot that moves only in arithmetic.
typedef struct PamojaSimRobot PamojaSimRobot;
// How fast a robot is asked to move.
typedef struct {
  // Forward speed along the x axis.
  float vx;
  // Leftward speed along the y axis; zero for drives that cannot strafe.
  float vy;
  // Yaw rate about the z axis, positive counter-clockwise.
  float omega;
} PamojaTwist;
// Where a robot is and which way it faces.
typedef struct {
  // Position along the world x axis, in meters.
  float x;
  // Position along the world y axis, in meters.
  float y;
  // Heading from the world x axis, in radians, positive counter-clockwise.
  float theta;
} PamojaPose;
// Applies a command, which the actuator records rather than acts on.
//
// # Arguments
//
// * `actuator` - the actuator.
// * `command` - the value commanded.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Safety
//
// `actuator` must be a live handle from [`pamoja_recording_actuator_new`].
PamojaStatus pamoja_recording_actuator_apply(PamojaRecordingActuator *actuator, float command);
// Reports how many commands an actuator has been given.
//
// # Arguments
//
// * `actuator` - the actuator.
//
// # Returns
//
// The number of commands, or 0 if `actuator` is null.
//
// # Safety
//
// `actuator` must be a live handle from [`pamoja_recording_actuator_new`], or
// null.
uintptr_t pamoja_recording_actuator_len(const PamojaRecordingActuator *actuator);
// Copies out the commands an actuator recorded, oldest first.
//
// # Arguments
//
// * `actuator` - the actuator.
// * `out_commands` - receives up to `capacity` commands.
// * `capacity` - how many floats `out_commands` can hold.
//
// # Returns
//
// How many commands were written, which is the smaller of `capacity` and the
// count from [`pamoja_recording_actuator_len`].
//
// # Safety
//
// `actuator` must be a live handle, and `out_commands` must point to at least
// `capacity` writable floats or be null when `capacity` is 0.
uintptr_t pamoja_recording_actuator_commands(const PamojaRecordingActuator *actuator,
                                             float *out_commands,
                                             uintptr_t capacity);
// Releases a recording actuator handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `actuator` must be a handle from [`pamoja_recording_actuator_new`] that has
// not already been freed, or null. After this call it must not be used again.
void pamoja_recording_actuator_free(PamojaRecordingActuator *actuator);
// Creates a robot that moves only in arithmetic.
//
// # Arguments
//
// * `start` - the pose it begins at.
// * `dt` - the seconds each command advances it; its magnitude is used.
//
// # Returns
//
// A handle the caller must release with [`pamoja_sim_robot_free`].
PamojaSimRobot *pamoja_sim_robot_new(PamojaPose start, float dt);
// Drives the robot for one time step.
//
// # Arguments
//
// * `robot` - the robot.
// * `command` - the speeds to hold for one step.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success.
//
// # Safety
//
// `robot` must be a live handle from [`pamoja_sim_robot_new`].
PamojaStatus pamoja_sim_robot_apply(PamojaSimRobot *robot, PamojaTwist command);
// Reads where the robot has got to.
//
// # Arguments
//
// * `robot` - the robot.
//
// # Returns
//
// The pose reached so far, or an all-zero pose if `robot` is null.
//
// # Safety
//
// `robot` must be a live handle from [`pamoja_sim_robot_new`], or null.
PamojaPose pamoja_sim_robot_pose(const PamojaSimRobot *robot);
// Releases a simulated robot handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `robot` must be a handle from [`pamoja_sim_robot_new`] that has not already
// been freed, or null. After this call it must not be used again.
void pamoja_sim_robot_free(PamojaSimRobot *robot);