bindings/dotnet/src/Pamoja.Core/Interop/NativeMethods.Transports.cs


    /// <summary>Applies a command, which is recorded rather than acted on.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_recording_actuator_apply(
        IntPtr actuator,
        float command);

    /// <summary>Reports how many commands an actuator has been given.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_recording_actuator_len(IntPtr actuator);

    /// <summary>Copies out the commands an actuator recorded.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_recording_actuator_commands(
        IntPtr actuator,
        Span<float> outCommands,
        nuint capacity);

    /// <summary>Releases a recording actuator handle.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_recording_actuator_free(IntPtr actuator);

    /// <summary>Creates a robot that moves only in arithmetic.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_sim_robot_new(PamojaPose start, float dt);

    /// <summary>Drives a simulated robot for one time step.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sim_robot_apply(IntPtr robot, PamojaTwist command);

    /// <summary>Reads where a simulated robot has got to.</summary>
    [LibraryImport(Library)]
    public static partial PamojaPose pamoja_sim_robot_pose(IntPtr robot);

    /// <summary>Releases a simulated robot handle.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_sim_robot_free(IntPtr robot);
}
